<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github</groupId>
  <artifactId>scrape-flow</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>fluent web scraping lib</name>


  <parent>
<!--    TODO exclude from build except for tests-->
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.5.6</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>

    <!--component specific-->
    <appcore-version>1.7.09-SNAPSHOT</appcore-version>
    <selenium-version>3.141.59</selenium-version>
    <htmlunit-version>2.56.0</htmlunit-version>
    <akka-version>2.5.13</akka-version>

    <!-- possibly same as in other components-->
    <java-xml-bind-version>2.3.1</java-xml-bind-version>
    <spring.version>5.0.1.RELEASE</spring.version>
    <spring.framework.version>5.1.6.RELEASE</spring.framework.version>
    <mysql-connector-version>8.0.15</mysql-connector-version>
    <commons-dbcp2-version>2.1.1</commons-dbcp2-version>
    <hibernate.version>5.2.12.Final</hibernate.version>
    <querydsl.version>4.2.1</querydsl.version>
    <fasterxml.version>2.9.8</fasterxml.version>
    <spring-data.version>2.0.1.RELEASE</spring-data.version>
    <mockito-version>2.18.3</mockito-version>
    <junit-version>4.12</junit-version>
    <log4j-version>2.5</log4j-version>
    <okhhtp3-version>3.14.0</okhhtp3-version>
    <javax-annotation-version>1.0</javax-annotation-version>
    <typesafe-config-version>1.3.1</typesafe-config-version>
    <commons-codec-version>1.10</commons-codec-version>
    <commons-math-version>3.3</commons-math-version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.9</maven.compiler.source>
    <maven.compiler.target>1.9</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>maven-central</id>
      <name>maven-central-repo</name>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>

<!--    for github releases-->
<!--    <repository>-->
<!--      <id>jitpack.io</id>-->
<!--      <url>https://jitpack.io</url>-->
<!--    </repository>-->

  </repositories>

  <dependencies>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.22</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-core</artifactId>
      <version>3.3.2.RELEASE</version>
    </dependency>

    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-test</artifactId>
      <version>3.3.2.RELEASE</version>
      <scope>test</scope>
    </dependency>


    <!-- htmlunit -->

    <dependency>
      <groupId>net.sourceforge.htmlunit</groupId>
      <artifactId>htmlunit</artifactId>
      <version>${htmlunit-version}</version>
    </dependency>

    <!-- Selenium -->

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-api</artifactId>
      <version>${selenium-version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-server</artifactId>
      <version>${selenium-version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-remote-driver</artifactId>
      <version>${selenium-version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-support</artifactId>
      <version>${selenium-version}</version>
    </dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>${selenium-version}</version>
    </dependency>


    <!-- config -->

    <dependency>
      <groupId>com.typesafe</groupId>
      <artifactId>config</artifactId>
      <version>${typesafe-config-version}</version>
    </dependency>

    <!--Logging-->

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j-version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j-version}</version>
    </dependency>


    <!-- jackson -->

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-parameter-names</artifactId>
      <version>${fasterxml.version}</version>
    </dependency>

    <!--testing-->

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito-version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit-version}</version>
      <scope>test</scope>
    </dependency>

    <!--    Spring for testing-->

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-beans</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>org.springframework</groupId>-->
<!--      <artifactId>spring-aspects</artifactId>-->
<!--      <version>${spring.version}</version>-->
<!--&lt;!&ndash;      <scope>test</scope>&ndash;&gt;-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>cglib</groupId>-->
<!--      <artifactId>cglib</artifactId>-->
<!--      <version>3.3.0</version>-->
<!--    </dependency>-->


<!--    <dependency>-->
<!--      <groupId>javax.annotation</groupId>-->
<!--      <artifactId>javax.annotation-api</artifactId>-->
<!--      <version>1.3.2</version>-->
<!--    </dependency>-->

  </dependencies>


  <build>
    <finalName>web-scraping-lib</finalName>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <source>9</source>
              <target>9</target>
            </configuration>
          </plugin>
      </plugins>
  </build>

</project>
